Fix anchor link spacing

--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -24,6 +24,10 @@
 .wpdtrt-anchorlinks {
     $block: &;
 
+    &__anchor-link {
+        margin-left: .25em;
+    }
+
     &__list,
     &__list-item {
         list-style: none;
